--- a/Bem.html
+++ b/Bem.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="header">
-		<div class="header__container">
+		<div class="container">
 			<div class="header__logo">
 				<img class="header__logo-img" src="images/Bem/header/Binary.png" alt="">
 			</div>
@@ -23,13 +23,15 @@
 					READ MORE
 				</span>
 			</a>
-			<a class="header__btn-to-down" href="#">
-				<img class="header__btn-to-down-img" src="images/Bem/header/arrow_down.png" alt="">
-			</a>
+			<div class="header__btn-container">
+				<a class="header__btn-to-down" href="#">
+					<img class="header__btn-to-down-img" src="images/Bem/header/arrow_down.png" alt="">
+				</a>
+			</div>
 		</div>
 	</div>
 	<div class="about">
-		<div class="about__container">
+		<div class="container">
 			<div class="about__menu">
 				<div class="about__menu-item"><a class="menu-link about__menu-link about__menu-link--active"
 						href="#">HOME</a></div>
@@ -38,49 +40,66 @@
 				<div class="about__menu-item"><a class="menu-link about__menu-link" href="#">CONTACT</a></div>
 			</div>
 			<div class="title about__title">ABOUT</div>
-			<div class="text about__text">
-				We specialize in contemporary, functional, and stunning websites with design that really brings that
-				"WOW" factor.
-				In our design process, we make sure to stay one step ahead of the latest trends,
-				never forgetting to abide by key web standards.
+			<div class="about__text-container">
+				<div class="text about__text">
+					We specialize in contemporary, functional, and stunning websites with design that really brings that
+					"WOW" factor.
+					In our design process, we make sure to stay one step ahead of the latest trends,
+					never forgetting to abide by key web standards.
+				</div>
 			</div>
-			<div class="about__row">
-				<div class="about__row-columns">
-					<div class="about__row-column about__row-column--1">
-						<div class="about__column-circle">
-							<img class="about__column-img-1" src="images/Bem/about/01.png">
-						</div>
-						<div class="about__column-title">WEB</div>
-						<div class="text about__column-text">
-							We tend to deliver unique and
-							functional design, through
-							innovation and creativity.
-						</div>
-						<div class="about__row-column about__row-column--2">
-							<div class="about__column-circle">
-								<img class="about__column-img-2" src="images/Bem/about/02.png">
-							</div>
-							<div class="about__column-title">iOS AND ANDROID</div>
-							<div class="text about__column-text">
-								We seek to bring new businesses and
-								customers closer together through valuable
-								insights and proper targeting.
-							</div>
-							<div class="about__row-column about__row-column--3">
-								<div class="about__column-circle">
-									<img class="about__column-img-3" src="images/Bem/about/03.png">
+				<div class="about__row-container">
+					<div class="about__row">
+						<div class="about__row-column">
+							<div class="about__column-item">
+								<div class="about__item-picture">
+									<div class="about__item-circle">
+										<img class="about__item-img" src="images/Bem/about/01.png" alt="">
+									</div>
 								</div>
-								<div class="about__column-title">MARKETING</div>
-								<div class="text about__column-text">
-									We’ll help you establish the right goals
+								<div class="about__item-body">
+									<div class="about__item-title">WEB</div>
+									<div class="text about__item-text">We tend to deliver unique and
+										functional design, through
+										innovation and creativity.</div>
+								</div>
+							</div>
+						</div>
+						<div class="about__row-column">
+							<div class="about__column-item">
+								<div class="about__item-picture">
+									<div class="about__item-circle">
+										<img class="about__item-img" src="images/Bem/about/02.png" alt="">
+									</div>
+								</div>
+								<div class="about__item-body">
+									<div class="about__item-title">iOS AND ANDROID</div>
+									<div class="text about__item-text">We seek to bring new businesses and
+									customers closer together through valuable
+									insights and proper targeting.</div>
+								</div>
+							</div>
+						</div>
+						<div class="about__row-column">
+							<div class="about__column-item">
+								<div class="about__item-picture">
+									<div class="about__item-circle">
+										<img class="about__item-img" src="images/Bem/about/03.png" alt="">
+									</div>
+								</div>
+								<div class="about__item-body">
+									<div class="about__item-title">MARKETING</div>
+									<div class="text about__item-text">We’ll help you establish the right goals
 									and build the right paths. Success depends
-									on setting the right intention.
+									on setting the right intention.</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
 </body>
 
 </html>
